Fix movable UI overflowing

--- a/styles.css
+++ b/styles.css
@@ -332,6 +332,7 @@ h3 {
 .movable-ui {
 	position: absolute;
 	pointer-events: none;
+    white-space: nowrap;
 }
 
 .movable-name {
